--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,7 +32,8 @@ jobs:
       with:
         name: app
         path: |
-          /
+          dist/
+          package-lock.json
 
     - name: Persist package
       uses: actions/download-artifact@v4
