--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,6 +33,7 @@ jobs:
         name: app
         path: |
           dist/
+          bun.lockb
 
     - name: Persist package
       uses: actions/download-artifact@v4
