--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,17 +27,27 @@ jobs:
     - name: Build
       run: npm run build
 
-    - name: Package
+    - name: Package app
       uses: actions/upload-artifact@v4
       with:
-        name: app
+        name: check-digit
         path: |
           dist/
 
-    - name: Persist package
+    - name: Save package
       uses: actions/download-artifact@v4
       with:
-        name: app
+        name: check-digit
         path: |
           dist
+
+    - name: Publish app
+      uses: deka0106/upload-to-dropbox@v2
+      with:
+        dropbox_access_token: ${{ secrets.DROPBOX_ACCESS_TOKEN }}
+        src: dist/**/*
+        dest: /check-digit/
+        mode: overwrite
+        multiple: true
+    
           
