--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -45,9 +45,9 @@ jobs:
       uses: deka0106/upload-to-dropbox@v2
       with:
         dropbox_access_token: ${{ secrets.DROPBOX_ACCESS_TOKEN }}
-        src: dist/**/*
+        src: dist/index.html
         dest: /check-digit/
         mode: overwrite
-        multiple: true
+#        multiple: true
     
           
