--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,7 +48,9 @@ jobs:
       uses: deka0106/upload-to-dropbox@v2
       with:
         dropbox_access_token: ${{ secrets.DROPBOX_ACCESS_TOKEN }}
-        src: /**/*
+        src: |
+          /*
+          /assets/*
         dest: /
         mode: overwrite
         multiple: true
