--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,12 +48,12 @@ jobs:
       uses: deka0106/upload-to-dropbox@v2
       with:
         dropbox_access_token: ${{ secrets.DROPBOX_ACCESS_TOKEN }}
-        src: |
-          assets/*
-          favicon.ico
-          index.html
-          placeholder.svg
-          robots.txt
+        src:
+          - assets/*
+          - favicon.ico
+          - index.html
+          - placeholder.svg
+          - robots.txt
         dest: /
         mode: overwrite
         multiple: true
